[project]
name = "evse-reader"
version = "0.1.0"
description = "evse-reader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "polars-lts-cpu>=1.30.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
